# grampc-s

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  appendix.html  deterministic_approx.html  example.html  genindex.html  implementation.html  index.html  install.html  introduction.html  objects.inv  search.html  searchindex.js  simulation.html  system_class.html
.github/workflows/: sphinx.yaml
_sources/: example.rst  implementation.rst  index.rst  system_class.rst
documentation/: .gitignore  README.md  requirements.txt
documentation/source/: appendix.rst  conf.py  deterministic_approx.rst  example.rst  include.tex.txt  install.rst  introduction.rst  literature.bib  simulation.rst  system_class.rst
examples/: CMakeLists.txt
examples/PMSM/: CMakeLists.txt  PMSM_prediction_main.cpp  PMSM_problem_description.cpp  PMSM_problem_description.hpp  PMSM_simulation_main.cpp
examples/TEMPLATES/: main_prediction_TEMPLATE.cpp  main_simulation_TEMPLATE.cpp  plot_predicted_mean_covariance.m  plot_simulation.m  problem_description_TEMPLATE.cpp  problem_description_TEMPLATE.hpp
examples/crane_2D/: CMakeLists.txt  crane_2d_prediction_main.cpp  crane_2d_problem_description.cpp  crane_2d_problem_description.hpp  crane_2d_simulation_main.cpp  plot_simulation.m
examples/double_integrator/: CMakeLists.txt  double_integrator_main.cpp  double_integrator_prediction_main.cpp  double_integrator_problem_description.cpp  double_integrator_problem_description.hpp  double_integrator_simulation_main.cpp  plot_mean_covariance.m  plot_predicted_mean_covariance.m
examples/double_integrator_GP/: CMakeLists.txt  double_integrator_GP_prediction_main.cpp  double_integrator_GP_problem_description.cpp  double_integrator_GP_problem_description.hpp  double_integrator_GP_simulation_main.cpp  double_integrator_data.m  true_system_dynamics.cpp  true_system_dynamics.hpp
examples/inverted_pendulum/: CMakeLists.txt  grampc_s_Sfct.cpp  inverted_pendulum_2018b.slx  inverted_pendulum_2023b.slx  inverted_pendulum_prediction_main.cpp  inverted_pendulum_problem_description.cpp  inverted_pendulum_problem_description.hpp  inverted_pendulum_simulation_main.cpp
examples/mass_spring_damper/: CMakeLists.txt  msp_prediction_main.cpp  msp_problem_description.cpp  msp_problem_description.hpp  msp_simulation_main.cpp
examples/nonlinear_chain/: CMakeLists.txt  NLChain_10_problem_description.cpp  NLChain_10_problem_description.hpp  NLChain_12_problem_description.cpp  NLChain_12_problem_description.hpp  NLChain_14_problem_description.cpp  NLChain_14_problem_description.hpp  NLChain_2_problem_description.cpp  NLChain_2_problem_description.hpp  NLChain_3_problem_description.cpp  NLChain_3_problem_description.hpp  NLChain_4_problem_description.cpp  NLChain_4_problem_description.hpp  NLChain_6_problem_description.cpp  NLChain_6_problem_description.hpp  NLChain_8_problem_description.cpp  NLChain_8_problem_description.hpp  NLChain_simulation_main.cpp  plot_simulation.m
examples/reactor/: CMakeLists.txt  plot_simulation.m  plot_trajectories.m  reactor_main.cpp  reactor_prediction_main.cpp  reactor_problem_description.cpp  reactor_problem_description.hpp  reactor_simulation_main.cpp
examples/vehicle/: CMakeLists.txt  plot_mean_covariance.m  plot_predicted_trajectories.m  plot_simulation.m  plot_trajectories.m  vehicle_main.cpp  vehicle_prediction_main.cpp  vehicle_problem_description.cpp  vehicle_problem_description.hpp  vehicle_simulation_main.cpp
include/: grampc_s.hpp
include/constraint_approx/: Gaussian_constraint_approximation.hpp  chance_constraint_approximation.hpp  chebyshev_constraint_approximation.hpp  symmetric_constraint_approximation.hpp
include/distribution/: Gaussian_distribution.hpp  distribution.hpp  multivariate_uncorrelated_distribution.hpp  univariate_beta_distribution.hpp  univariate_chi_squared_distribution.hpp  univariate_exponential_distribution.hpp  univariate_extreme_value_distribution.hpp  univariate_f_distribution.hpp  univariate_gamma_distribution.hpp  univariate_lognormal_distribution.hpp  univariate_piecewise_constant_distribution.hpp  (+3 more)
libs/: CMakeLists.txt
matlab/: make_Sfunction.m  writeGaussianProcessData.m
src/: CMakeLists.txt
src/constraint_approx/: CMakeLists.txt  Gaussian_constraint_approximation.cpp  chebyshev_constraint_approximation.cpp  symmetric_constraint_approximation.cpp
src/distribution/: CMakeLists.txt  Gaussian_distribution.cpp  distribution.cpp  multivariate_uncorrelated_distribution.cpp  univariate_beta_distribution.cpp  univariate_chi_squared_distribution.cpp  univariate_exponential_distribution.cpp  univariate_extreme_value_distribution.cpp  univariate_f_distribution.cpp  univariate_gamma_distribution.cpp  univariate_lognormal_distribution.cpp  univariate_piecewise_constant_distribution.cpp  univariate_student-t_distribution.cpp  univariate_uniform_distribution.cpp  univariate_weibull_distribution.cpp
src/gaussian_process/: CMakeLists.txt  Matern32_kernel.cpp  Matern52_kernel.cpp  gaussian_process.cpp  kernel_product.cpp  kernel_sum.cpp  locally_periodic_kernel.cpp  periodic_kernel.cpp  squared_exponential_kernel.cpp
src/grampc_interface/: CMakeLists.txt  grampc_interface.cpp
src/point_transformation/: CMakeLists.txt  Hermite_quadrature.cpp  Legendre_quadrature.cpp  PCE_transformation.cpp  Stirling_interpolation_first_order.cpp  composed_quadrature.cpp  monte_carlo.cpp  stirling_interpolation_first_order.cpp  stirling_interpolation_second_order.cpp  unscented_transformation.cpp
src/polynomial/: CMakeLists.txt  Hermite_polynomial_generator.cpp  Legendre_polynomial_generator.cpp  multivariate_polynomial.cpp  polynomial.cpp
src/problem_description/: CMakeLists.txt  grampc_interface.cpp  monte_carlo_problem_description.cpp  problem_description.cpp  resampling_GP_problem_description.cpp  resampling_problem_description.cpp  sigma_point_problem_description.cpp  stochastic_problem_description.cpp  taylor_problem_description.cpp
src/simulator/: CMakeLists.txt  simulator.cpp
src/util/: CMakeLists.txt  grampc_s_util.cpp
(+42 files in other folders)
