# This file is part of GRAMPC-S - (https://github.com/grampc/grampc-s)
#
# GRAMPC-S -- A software framework for stochastic model predictive control (SMPC)
#
# Copyright 2024 Daniel Landgraf, Andreas Voelz, Knut Graichen.
# All rights reserved.
#
# GRAMPC-S is distributed under the BSD-3-Clause license, see LICENSE.txt

add_subdirectory(reactor)
add_subdirectory(double_integrator)
add_subdirectory(double_integrator_GP)
add_subdirectory(inverted_pendulum)
add_subdirectory(vehicle)
add_subdirectory(PMSM)
add_subdirectory(crane_2D)
add_subdirectory(mass_spring_damper)
add_subdirectory(nonlinear_chain)
