# This file is part of GRAMPC-S - (https://github.com/grampc/grampc-s)
#
# GRAMPC-S -- A software framework for stochastic model predictive control (SMPC)
#
# Copyright 2024 Daniel Landgraf, Andreas Voelz, Knut Graichen.
# All rights reserved.
#
# GRAMPC-S is distributed under the BSD-3-Clause license, see LICENSE.txt

add_subdirectory(constraint_approx)
add_subdirectory(distribution)
add_subdirectory(point_transformation)
add_subdirectory(polynomial)
add_subdirectory(problem_description)
add_subdirectory(util)
add_subdirectory(gaussian_process)
add_subdirectory(grampc_interface)
add_subdirectory(simulator)